complete room adding function except render new room item in front end.

--- a/resources/sass/user/component/_input.scss
+++ b/resources/sass/user/component/_input.scss
@@ -187,3 +187,14 @@
         }
     }
 }
+
+.trovie-fieldset {
+    border: 1px solid var(--color-base);
+    @include Rounded(4px);
+
+    legend {
+        font-size: 1rem;
+        width: max-content;
+        margin-left: .5rem;
+    }
+}
