--- a/public/user/css/app.css
+++ b/public/user/css/app.css
@@ -375,6 +375,19 @@ a:hover {
   border-radius: 0;
 }
 
+.trovie-fieldset {
+  border: 1px solid var(--color-base);
+  border-radius: 4px;
+}
+
+.trovie-fieldset legend {
+  font-size: 1rem;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  margin-left: 0.5rem;
+}
+
 .btn {
   border-radius: 0;
 }
@@ -774,19 +787,6 @@ a:hover {
   overflow-y: auto;
 }
 
-.invoice-entries fieldset {
-  border: 1px solid var(--color-base);
-  border-radius: 4px;
-}
-
-.invoice-entries fieldset legend {
-  font-size: 1rem;
-  width: -webkit-max-content;
-  width: -moz-max-content;
-  width: max-content;
-  margin-left: 0.5rem;
-}
-
 .address-result-list {
   position: absolute;
   top: 100%;
@@ -1038,21 +1038,6 @@ body {
   padding: 1rem;
 }
 
-@media only screen and (min-width: 769px) {
-  .page-wrapper .main-panel__content {
-    height: 100vh;
-    overflow-y: auto;
-  }
-
-  .page-wrapper .main-panel__content::-webkit-scrollbar {
-    width: 0.5rem;
-  }
-
-  .page-wrapper .main-panel__content::-webkit-scrollbar-thumb {
-    background: var(--color-base);
-  }
-}
-
 .panel-content__header {
   display: flex;
   align-items: center;
@@ -1079,6 +1064,25 @@ body {
 .page-item.active .page-link {
   background: var(--color-base) !important;
   border-color: var(--color-base) !important;
+}
+
+@media only screen and (min-width: 769px) {
+  .trovie-scrollbar {
+    height: 100vh;
+    overflow-y: auto;
+  }
+
+  .trovie-scrollbar::-webkit-scrollbar {
+    width: 0.5rem;
+  }
+
+  .trovie-scrollbar::-webkit-scrollbar-track {
+    background: lightgray;
+  }
+
+  .trovie-scrollbar::-webkit-scrollbar-thumb {
+    background: var(--color-base);
+  }
 }
 
 .main-sidebar {
@@ -1493,6 +1497,12 @@ body {
 .panel-content--room__room-modal__form__services {
   display: flex;
   flex-wrap: wrap;
+  max-height: calc(32px * 7);
+  overflow: auto;
+}
+
+.panel-content--room__room-modal__form__services.max-height-100 {
+  max-height: 100%;
 }
 
 .panel-content--room__room-modal__form__services__item {
