--- a/resources/sass/user/layout/_master.scss
+++ b/resources/sass/user/layout/_master.scss
@@ -51,23 +51,6 @@ body {
             flex-direction: column;
             flex: 1 1 auto;
             padding: 1rem;
-
-
-            @include ResponsiveMin(MD) {
-                height: 100vh;
-                overflow-y: auto;
-                &::-webkit-scrollbar {
-                    width: .5rem;
-                }
-
-                &::-webkit-scrollbar-track {
-                    //background: var(--color-variant-3);
-                }
-
-                &::-webkit-scrollbar-thumb {
-                    background: var(--color-base);
-                }
-            }
         }
     }
 }
@@ -103,6 +86,23 @@ body {
         .page-link {
             background: var(--color-base) !important;
             border-color: var(--color-base) !important;
+        }
+    }
+}
+.trovie-scrollbar{
+    @include ResponsiveMin(MD) {
+        height: 100vh;
+        overflow-y: auto;
+        &::-webkit-scrollbar {
+            width: .5rem;
+        }
+
+        &::-webkit-scrollbar-track {
+            background: lightgray;
+        }
+
+        &::-webkit-scrollbar-thumb {
+            background: var(--color-base);
         }
     }
 }
