--- a/resources/sass/user/layout/_room.scss
+++ b/resources/sass/user/layout/_room.scss
@@ -160,6 +160,12 @@
             &__services {
                 display: flex;
                 flex-wrap: wrap;
+                max-height: calc(32px * 7);
+                overflow: auto;
+
+                &.max-height-100 {
+                    max-height: 100%;
+                }
 
                 &__item {
                     font-size: 0.85rem;
