--- a/resources/sass/user/layout/_room.scss
+++ b/resources/sass/user/layout/_room.scss
@@ -219,8 +219,9 @@
 }
 
 .modal-room-users__list {
-    max-height: 300px;
-    overflow-y: auto;
+    //border: 1px solid var(--color-base);
+    //padding-top: 1rem;
+    //@include Rounded(6px 0 0 6px);
 
     .list__user {
         display: flex;
