--- a/public/user/css/app.css
+++ b/public/user/css/app.css
@@ -257,7 +257,7 @@ a:hover {
 
 .form-group--landscape label {
   display: flex;
-  flex: 1 1 40%;
+  flex: 0 0 40%;
 }
 
 .form-group--unit {
@@ -273,7 +273,7 @@ a:hover {
 }
 
 .form-group--unit .form-control {
-  padding-right: 2rem;
+  padding-right: 3rem;
 }
 
 .form-group--unit .form-control--wide {
@@ -1243,6 +1243,20 @@ body {
   }
 }
 
+div.dataTables_wrapper div.dataTables_filter input {
+  border-radius: 0;
+}
+
+.page-item.disabled .page-link {
+  border-radius: 0;
+}
+
+@media print {
+  .no-print {
+    display: none !important;
+  }
+}
+
 .main-sidebar {
   z-index: 99;
   background: #ffffff;
@@ -1896,5 +1910,71 @@ body {
   font-size: 1rem;
   color: #333333;
   margin-bottom: 0;
+}
+
+@media only screen and (max-width: 768px) {
+  #table-contract-list th {
+    font-size: 11px;
+  }
+
+  #table-contract-list th,
+  #table-contract-list td {
+    padding: 0.5rem 0.25rem;
+    font-size: 12px;
+  }
+}
+
+@media only screen and (max-width: MD) {
+  #table-contract-list th {
+    font-size: 11px;
+  }
+
+  #table-contract-list th,
+  #table-contract-list td {
+    padding: 0.5rem 0.25rem;
+    font-size: 12px;
+  }
+}
+
+@media only screen and (max-width: 1200px) {
+  #table-contract-list .contract-state span {
+    display: none;
+  }
+}
+
+.template-contract .contract__body p {
+  margin-bottom: 0.25rem;
+}
+
+#contract-create__info-modal #collapse-user-info fieldset .row.disabled {
+  position: relative;
+}
+
+#contract-create__info-modal #collapse-user-info fieldset .row.disabled::after {
+  border-radius: 4px;
+  content: "";
+  position: absolute;
+  top: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.1);
+  z-index: 2;
+}
+
+#contract-create__info-modal #collapse-user-info fieldset .row.disabled input {
+  z-index: 0;
+}
+
+@media print {
+  .template-contract {
+    width: 100% !important;
+    padding: 0 1.5rem;
+    min-width: 8.3in;
+  }
+
+  .modal-dialog {
+    max-width: 100vw !important;
+  }
 }
 
