--- a/resources/sass/user/layout/_sidebar.scss
+++ b/resources/sass/user/layout/_sidebar.scss
@@ -11,6 +11,7 @@
     position: fixed;
     top: 0;
     left: 0;
+    overflow: hidden;
     @extend %transition-section-item-fast;
     @include Responsive(MD) {
         background: rgba(255, 255, 255, 0.7);
