--- a/resources/sass/frontend/app.scss
+++ b/resources/sass/frontend/app.scss
@@ -6,15 +6,17 @@
 //Components
 @import "component/input";
 @import "component/button";
-@import "component/main-card";
-@import "component/host-card";
+//@import "component/main-card";
+//@import "component/host-card";
 @import "component/room-card";
-@import "component/invoice-entries";
+//@import "component/invoice-entries";
 @import "component/address-result-list";
 @import "component/trovie-gallery-uploader";
 @import "component/trovie-avatar-upload";
 //Page
 @import "layout/master";
 @import "layout/header";
+@import "layout/footer";
 @import "layout/index";
+@import "layout/room_article";
 
