--- a/resources/sass/frontend/layout/_room_article.scss
+++ b/resources/sass/frontend/layout/_room_article.scss
@@ -9,9 +9,7 @@
     }
 
     .lSSlideWrapper {
-        border-top-right-radius: 14px;
-        border-top-left-radius: 14px;
-
+        border-radius: 14px;
     }
 
     .gallery__list > li {
@@ -25,6 +23,7 @@
 
             img {
                 height: 100% !important;
+                border-radius: 14px;
             }
 
             @include Responsive(LG) {
