--- a/resources/sass/user/component/_button.scss
+++ b/resources/sass/user/component/_button.scss
@@ -1,5 +1,5 @@
 .btn {
-    @include Rounded(0);
+    @include Rounded(6px);
 
     &-base {
         @include makeButton(var(--color-base), #ffffff);
