--- a/resources/sass/user/component/_main-card.scss
+++ b/resources/sass/user/component/_main-card.scss
@@ -1,8 +1,10 @@
 .main-card {
     background: #ffffff;
-    @extend .shadow-md-light;
+    -webkit-box-shadow: 0 1px 2px #00000033;
+    -moz-box-shadow: 0 1px 2px #00000033;
+    box-shadow: 0 1px 2px #00000033;
 
-    //@include Rounded(24px);
+    @include Rounded(24px);
 
     &__header {
         padding: 1rem 1rem 0rem 1rem;
